# Hayvenhurst-dev

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  native_binary_issue.md  performance_regression.md
.github/actions/affected-tests/: action.yml
.github/workflows/: build-native.yml  ci.yml  pages.yml  release.yml
bench/: branch-switch-cost.ts  gen-repo.ts  rss.sh  wedge-demo.sh
ci/: hayven-affected-tests.sh
daemon/: README.md  bunfig.toml  package.json  tsconfig.json
daemon/src/: cli.ts  spine.ts  version.ts
daemon/src/cli/: _shared.ts  affected_tests.ts  branches.ts  claim.ts  config.ts  context.ts  daemon.ts  doctor.ts  fleet_context.ts  impact.ts  importers.ts  ingest.ts  init.ts  mcp.ts  memory.ts  models.ts  neighbors.ts  node.ts  plan_lanes.ts  proxy.ts  query.ts  refs.ts  reindex.ts  release.ts  summarize.ts  sync.ts  traces.ts  view.ts
daemon/src/config/: defaults.ts  load.ts
daemon/src/conflict/: adjacency.ts  cloud_oracle.ts  contract_diff_oracle.ts  extractor_oracle.ts  llm_oracle.ts  native_signatures.ts  oracle.ts  verify.ts
daemon/src/crdt/: gset.ts  hlc.ts  lww.ts  merkle.ts  oplog.ts  orset.ts  state.ts  wire.ts
daemon/src/daemon/: detach.ts  lifecycle.ts  registry.ts  server.ts
daemon/src/db/: affected_tests.ts  branch_index.ts  context_cache.ts  context_escalation.ts  context_helper.ts  context_pack.ts  fleet_context.ts  fleet_memory.ts  freshness.ts  fts.ts  graph_walk.ts  impact_preview.ts  imported_symbol.ts  lane_planner.ts  migrations.ts  mutation_select.ts  queries.ts  queryExpansion.ts  schema.ts  task_resolve.ts  test_coverage.ts  test_nodes.ts  test_prioritization.ts
daemon/src/graph/: idScheme.ts  ingest.ts  nodeReader.ts  nodeWriter.ts  specifierResolve.ts  summarize.ts  summarize_scan.ts  traceResolve.ts  types.ts  workspace.ts
daemon/src/hardware/: detect.ts
daemon/src/mcp/: context_server.ts
daemon/src/models/: install.ts  registry.ts
daemon/src/native/: infer.ts  locate.ts  process.ts  protocol.ts  watcher.ts
daemon/src/orchestrator/: context_provider.ts
daemon/src/proxy/: compaction.ts  context_rewrite.ts  history_compact.ts  history_compact_gemini.ts  history_compact_openai.ts  providers.ts  (+1 more)
daemon/tests/: _helpers.ts  adjacency.test.ts  affected_tests.test.ts  affected_tests_cli.test.ts  affected_tests_route.test.ts  api_consistency.test.ts  bare_call_resolve.test.ts  branch_index.test.ts  branch_ingest_e2e.test.ts  branches_cli.test.ts  budget_ladder.test.ts  call_sites.test.ts  claims.test.ts  claims_conflict.test.ts  claims_crdt.test.ts  cli.test.ts  cli_identity_warning.test.ts  config.test.ts  conflict_adjacency_gate.test.ts  conflict_rate.test.ts  conflict_rate_contractdiff.test.ts  context_cache.test.ts  context_escalation.test.ts  context_helper.test.ts  context_pack.test.ts  context_pack_lanes.test.ts  context_route.test.ts  contract_diff_oracle.test.ts  crdt_convergence.test.ts  crdt_hlc.test.ts  crdt_merkle.test.ts  crdt_oplog.test.ts  crdt_semantics.test.ts  crdt_varint.test.ts  crdt_wire.test.ts  daemon_branch_coverage.test.ts  daemon_branch_switch.test.ts  daemon_detach.test.ts  daemon_identity.test.ts  daemon_serves_register.test.ts  (+86 more)
docs/: CI_AFFECTED_TESTS.md  DESIGN_LESSONS.md  INTEGRATION.md  QUICKSTART.md  RELEASE_NOTES_v0.0.4.md  RELEASE_NOTES_v0.0.5.md  RELEASE_NOTES_v0.0.6.md  WHY_HAYVENHURST.md
native/: Cargo.toml  README.md
native/docs/: TREE_SITTER_NOTES.md
native/src/: lib.rs  main.rs  proto.rs
native/src/infer/: gguf_tokenizer.rs  mod.rs
native/src/parse/: extract.rs  hash.rs  language.rs  mod.rs  signature.rs  walker.rs
native/src/parse/queries/: go.scm  javascript.scm  python.scm  rust.scm  typescript.scm
native/src/serialize/: ffi.rs  mod.rs  wire.rs
native/src/watch/: mod.rs
native/tests/: astro_template.rs  imports_python.rs  imports_rust.rs  imports_typescript.rs  infer.rs  parse_python.rs  parse_rust.rs  parse_typescript.rs  signature_langs.rs  stubs.rs
native/tests/common/: mod.rs
native/tests/fixtures/: imports.py  imports.rs  imports.ts  sample.py  sample.rs  sample.ts
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: install-binary.md
plugin/hooks/: hooks.json
plugin/scripts/: ensure-daemon.sh  install-hayven.sh
skill/: hayvenhurst.md
trace/browser/: README.md  index.ts  package.json  tsconfig.json
trace/bun/: README.md  bun-test.ts  index.ts  package.json  tsconfig.json  vitest.ts
trace/go/: README.md  aggregator.go  aggregator_test.go  collector.go  collector_test.go  coverage.go  coverage_test.go  doc.go  env.go  env_test.go  flusher.go  flusher_test.go  go.mod  pprof.go  pprof_test.go
trace/python/: README.md  pyproject.toml
trace/python/coverage_fixtures/: __init__.py  entities.py
trace/python/src/hayven_trace/: __init__.py  aggregator.py  flusher.py  pytest_plugin.py  tracer.py
trace/python/tests/: conftest.py  test_aggregator.py  test_coverage.py  test_flush_batching.py  test_flusher.py  test_tracer.py
trace/rust/: Cargo.toml  README.md
trace/rust/src/: aggregator.rs  flusher.rs  layer.rs  lib.rs
viewer/: README.md  astro.config.mjs  package.json  tsconfig.json
viewer/tests/: _measure.ts  _perf.ts  contract.test.ts  degradation.test.ts  interact.test.ts  layout.test.ts  lod.test.ts  md.test.ts  mocks.test.ts  render.test.ts  useQuery.test.ts  viewport.test.ts
(+77 files in other folders)
